--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ɲova Market</title>
+    <link rel="icon" href="./client/src/resources/LOGO.webp" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
