--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./src/components/Header/LOGO.webp" type="image/x-icon">
     <title>Ɲova Market</title>
   </head>
   <body>
