--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./src/components/Header/LOGO.webp" type="image/x-icon">
-    <title>Ɲova Market</title>
+    <link rel="shortcut icon" href="{%=o.htmlWebpackPlugin.files.favicon%}" type="image/x-icon">
+    <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
     <div id="root"></div>
