--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>NovaCommerce</title>
   </head>
   <body>
     <div id="root"></div>
   </body>
+  <script src="./client/main.jsx" type="module"></script>
 </html>
